# reactos

dll/win32/: CMakeLists.txt
dll/win32/adsldp/: CMakeLists.txt  adsldp.c
dll/win32/adsldpc/: CMakeLists.txt
sdk/tools/winesync/: activeds.cfg  adsldp.cfg  adsldp_tests.cfg  adsldpc.cfg
